<resources>
    <string name="app_name">Sentaigazine</string>
    <string name="tv_exampleName">Example Name</string>
    <string name="tv_exampleEmail">blabla@gmail.com</string>
    <string name="tv_AboutName">Pangondion K Naibaho</string>
    <string name="tv_AboutEmail">dionkurniawan130@gmail.com</string>
    <string name="tv_dummySentaiName">Dummy Sentai Name</string>
    <string name="tv_DummyRating">x / 10</string>
    <string name="tv_DummyYearProd">1975</string>
    <string name="tv_DummyStory">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.\nUt enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="btnTxt_FindMerchandise">Saya mau cari merchandise Sentai ini !</string>
    <string name="abtxt_SentaiDetailTitle">Sentai Detail</string>
    <string name="abtxt_AboutTitle">About Me</string>
    <string name="tv_YearProdTitle">Tahun Produksi : %s</string>
    <string name="tv_RatingTitle">Rating : %s / 10.0</string>
    <string name="tv_ItemRating">%s / 10.0</string>
    <string name="tv_TotalMember">Total Member : %s</string>
    <string name="tv_DescriptionTitle">Deskripsi Singkat :</string>
</resources>