<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivSentai"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tvSentaiName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ivSentai"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/ivSentai"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/tv_dummySentaiName"/>

    <TextView
        android:id="@+id/tvRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@+id/tvSentaiName"
        app:layout_constraintTop_toBottomOf="@id/tvSentaiName"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_star_rate"
        android:text="@string/tv_DummyRating"/>

    <TextView
        android:id="@+id/tvYearProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/tvSentaiName"
        app:layout_constraintTop_toTopOf="@+id/tvRating"
        app:layout_constraintBottom_toBottomOf="@+id/tvRating"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:drawableLeft="@drawable/ic_videocam"
        android:text="@string/tv_DummyYearProd"/>

    <TextView
        android:id="@+id/tvStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="220dp"
        app:layout_constraintStart_toEndOf="@id/ivSentai"
        app:layout_constraintTop_toBottomOf="@+id/tvRating"
        app:layout_constraintBottom_toBottomOf="@+id/ivSentai"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:maxLines="4"
        android:textSize="16sp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:text="@string/tv_DummyStory"/>

</androidx.constraintlayout.widget.ConstraintLayout>